# stenosis

./: .gitignore  _bench_R1_speed.py  _boss_cut_pptx.py  _compare_map30_results.json  _compare_temporal_cadica50plus_results.json  _compare_temporal_cpc_consistency.json  _compare_temporal_cpc_consistency.txt  _compare_temporal_small_t5_k0_vs_distill_cadica50plus.json  _diag_R1_score_dist.py  _eval_cadica_unified.py  _eval_cadica_unified_results.json  _eval_cadica_video_ablate.py  _eval_cadica_video_ablate_nodistill_latest.json  _eval_cadica_video_ablate_postref_centreKD_stfsAlign_stfsShifter.json  _eval_cadica_video_ablate_results.json  _eval_cadica_video_count_variance.py  _eval_cadica_video_count_variance_results.json  _eval_cadica_video_module_importance.py  _eval_cadica_video_module_importance_smoke_postref_modules.json  _eval_cadica_video_module_importance_smoke_postref_modules.txt  _eval_cadica_video_module_importance_stfs_crrcd_v6_etf_postref_centreKD_stfsAlign_stfsShifter.json  _eval_cadica_video_module_importance_stfs_crrcd_v6_etf_postref_centreKD_stfsAlign_stfsShifter.txt  _eval_compare_map30.py  _eval_compare_temporal_small_t5_k0_vs_distill.py  _eval_crrcd_cons_new_frag.py  _eval_crrcd_run.py  _eval_dataset2_augs_both.py  _eval_dataset2_split_accuracy_stfs_crrcd_v6_etf_postref_centreKD_stfsAlign_stfsShifter.json  _eval_dataset2_split_accuracy_stfs_crrcd_v6_etf_postref_centreKD_stfsAlign_stfsShifter.txt  _eval_dataset2_split_test_video_module_importance_stfs_crrcd_v6_etf_postref_centreKD_stfsAlign_stfsShifter.json  _eval_dataset2_split_test_video_module_importance_stfs_crrcd_v6_etf_postref_centreKD_stfsAlign_stfsShifter.txt  _eval_large_arcade2x_704_on_cadica50plus.py  _eval_large_arcade2x_704_on_dataset2_test.py  _eval_large_arcade2x_704_reg_stfs_metrics.py  _eval_large_lsj_both.py  _eval_large_wd1e3_both.py  _eval_overfit_R1_intuitive.py  _eval_psstt_dataset2.py  _eval_small_arcade2x_512_reg.py  _eval_stfs_ablations.py  (+69 more)
ViTDet/: download_weights.sh  train_cfg.yaml  train_stenosis.py  vitae_backbone.py
detnet/: __init__.py  config.py  dataset.py  evaluate.py  model.py  sca.py  train.py
domain_gap/: README.md  aggregate_results.py  compute_fid.py  dann_resnet.py  dataset_randomization.py  extract_and_visualize_dr.py  extract_and_visualize_drms.py  extract_features.py  extract_features_cd584.py  extract_features_dann.py  extract_features_fda.py  extract_features_mixstyle.py  fda_transform.py  mixstyle_resnet.py  train.py  train_dann.py  (+8 more)
rf-detr/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml  start_train.txt
rf-detr/.github/: CODEOWNERS
rf-detr/.github/workflows/: ci-tests-cpu.yml  ci-tests-gpu.yml  ci-typing.yml  publish-release.yml
rf-detr/configs/: rfdetr_base.yaml  rfdetr_large.yaml  rfdetr_medium.yaml  rfdetr_nano.yaml  rfdetr_seg_2xlarge.yaml  rfdetr_seg_large.yaml  rfdetr_seg_medium.yaml  rfdetr_seg_nano.yaml  rfdetr_seg_small.yaml  rfdetr_seg_xlarge.yaml  rfdetr_small.yaml
rf-detr/docs/: index.md
rf-detr/docs/learn/: export.md  migration.md  pretrained.md
rf-detr/docs/learn/run/: detection.md  segmentation.md
rf-detr/docs/learn/train/: advanced.md  augmentations.md  customization.md  index.md  loggers.md  training-parameters.md
rf-detr/docs/reference/: large.md  medium.md  nano.md  seg_2xlarge.md  seg_large.md  seg_medium.md  seg_nano.md  seg_small.md  seg_xlarge.md  small.md  training.md
rf-detr/docs/tutorials/: index.md
rf-detr/notebooks/: release-demo_1-5.ipynb  release-demo_1-6.ipynb
rf-detr/src/rfdetr/: _namespace.py  config.py  detr.py  inference.py  variants.py
rf-detr/src/rfdetr/assets/: __init__.py  model_weights.py
rf-detr/src/rfdetr/datasets/: aug_config.py  coco.py  o365.py  transforms.py  yolo.py
rf-detr/src/rfdetr/evaluation/: coco_eval.py  matching.py
rf-detr/src/rfdetr/export/: benchmark.py  main.py
rf-detr/src/rfdetr/export/_onnx/: exporter.py
rf-detr/src/rfdetr/models/: criterion.py  matcher.py  position_encoding.py  postprocess.py  transformer.py  weights.py
rf-detr/src/rfdetr/models/backbone/: backbone.py  dinov2.py  dinov2_with_windowed_attn.py
rf-detr/src/rfdetr/models/heads/: segmentation.py
rf-detr/src/rfdetr/models/ops/functions/: ms_deform_attn_func.py
rf-detr/src/rfdetr/models/ops/modules/: ms_deform_attn.py
rf-detr/src/rfdetr/training/: auto_batch.py  module_data.py  module_model.py  trainer.py
rf-detr/src/rfdetr/training/callbacks/: best_model.py  coco_eval.py
rf-detr/src/rfdetr/util/: misc.py
rf-detr/src/rfdetr/utilities/: __init__.py  box_ops.py  dynamic_batch_resize.py  state_dict.py  tensors.py
rf-detr/src/rfdetr/visualize/: data.py
rf-detr/tests/: conftest.py  test_dynamic_batch_resize.py  test_evaluation.py  test_namespace.py  try_instantiate_all_models.py
rf-detr/tests/assets/: test_downloads.py
rf-detr/tests/benchmarks/: conftest.py  test_inference_coco.py  test_training_synthetic.py
rf-detr/tests/cli/: test_configs.py  test_legacy_cli.py  test_optional_dependencies.py  test_smoke.py
rf-detr/tests/export/: test_tensorrt_export.py
rf-detr/tests/models/: test_builder_characterization.py  test_builders.py  test_config.py  test_detection_head.py  test_drop_path.py  test_export.py  test_from_checkpoint.py  test_matcher.py  test_optimize_for_inference.py  test_predict.py  test_segmentation_head.py  test_train_resume.py  test_transformer.py  test_trt_inference.py  test_validate_shape_dims.py  test_weights.py
rf-detr/tests/models/backbone/: test_backbone_export.py  test_windowed_dino.py
rf-detr/tests/training/: conftest.py  helpers.py  test_args.py  test_auto_batch.py  test_best_model_callback.py  test_build_trainer.py  test_cli.py  test_coco_eval_callback.py  test_detr_shim.py  test_drop_path_callback.py  test_ema_callback.py  test_load_pretrain_weights.py  test_metrics_csv.py  test_module_data.py  test_module_model.py  test_trainer.py  test_trainer_smoke.py
rf-detr/tests/utilities/: test_box_ops.py  test_distributed.py  test_file_validation.py  test_misc.py  test_package.py  test_state_dict.py  test_tensors.py
(+432 files in other folders)
